# dining-philosophers

./: CMakeLists.txt
src/: chopstick.cpp  chopstick.hpp  philosopher.cpp  philosopher.hpp  philosopher_try_wait.cpp  philosophers.cpp  table.cpp  visualise.cpp  visualise.hpp
src_deadlock/: chopstick.cpp  philosopher_try_wait.cpp  philosophers.cpp  visualise.hpp
src_heirarchy/: chopstick.cpp  chopstick.hpp  table.cpp  table.hpp
src_hierarchy/: chopstick.cpp  chopstick.hpp  philosopher.cpp  philosopher.hpp  philosophers.cpp  table.cpp  table.hpp  visualise.cpp  visualise.hpp
src_mutex/: philosopher.cpp  philosopher.hpp  table.cpp  table.hpp
test/: test_philosopher.cpp
